@@ -17,7 +17,6 @@ import java.util.UUID;
 import java.util.stream.IntStream;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
 class FanOutNotificationHandlerTest {
@@ -28,23 +27,32 @@ class FanOutNotificationHandlerTest {
     private final FanOutNotificationHandler handler = new FanOutNotificationHandler(recipients, save, sources);
     private final UUID grid = UUID.randomUUID();
 
-    private NotificationCreateMessage<JsonNode> weather(String time) {
-        return new NotificationCreateMessage<>(UUID.randomUUID(), 2, NotificationType.WEATHER_RAIN,
-                OffsetDateTime.now(), "WEATHER_RAIN:" + OffsetDateTime.parse(time)
-                    .withOffsetSameInstant(java.time.ZoneOffset.ofHours(9)).toLocalDate(),
-                NotificationKafkaJson.mapper().valueToTree(
-                    new WeatherNotificationCreateEvent(grid, "RAIN", OffsetDateTime.parse(time))));
+    private NotificationCreateMessage<JsonNode> weather() {
+        return new NotificationCreateMessage<>(UUID.randomUUID(), 2, NotificationType.WEATHER_FORECAST,
+                OffsetDateTime.now(), "WEATHER_FORECAST:" + java.time.LocalDate.now(java.time.ZoneOffset.ofHours(9)).plusDays(1),
+                NotificationKafkaJson.mapper().valueToTree(new WeatherNotificationCreateEvent(
+                        grid, "내일 날씨 예보입니다. | 서울시 은평구 진관동", "최고 27도, 최저 14도 | 14시부터 비 예정")));
     }
 
-    @ParameterizedTest
-    @CsvSource({"2026-09-13T07:00:00+09:00,9월 13일", "2026-09-12T22:00:00Z,9월 13일",
-            "2026-09-12T17:00:00-05:00,9월 13일", "2026-12-31T22:00:00Z,1월 1일"})
-    void rainTextUsesKst(String time, String date) {
+    @Test
+    void preservesBatchTitleAndContent() {
         var receiver = UUID.randomUUID();
         when(recipients.findGridUsers(grid, null, 501)).thenReturn(List.of(receiver));
-        handler.handle(weather(time));
-        verify(save).savePage(eq(NotificationType.WEATHER_RAIN), anyString(), eq(List.of(receiver)),
-                eq(date + " 비 예보"), eq(date + " 7시부터 비가 올 것으로 예상됩니다."), any());
+        handler.handle(weather());
+        verify(save).savePage(eq(NotificationType.WEATHER_FORECAST), anyString(), eq(List.of(receiver)),
+                eq("내일 날씨 예보입니다. | 서울시 은평구 진관동"), eq("최고 27도, 최저 14도 | 14시부터 비 예정"), any());
+    }
+
+    @Test
+    void expiredInitialAndContinuationDoNotAccessDatabase() {
+        var valid = weather();
+        for (UUID cursor : java.util.Arrays.asList(null, UUID.randomUUID())) {
+            var expired = new NotificationCreateMessage<JsonNode>(valid.eventId(), 2, valid.type(), valid.occurredAt(),
+                    "WEATHER_FORECAST:" + java.time.LocalDate.now(java.time.ZoneOffset.ofHours(9)),
+                    NotificationKafkaJson.mapper().valueToTree(new WeatherNotificationCreateEvent(grid, "제목", "본문", cursor)));
+            assertThat(handler.handle(expired).continuation()).isNull();
+        }
+        verifyNoInteractions(recipients, save);
     }
 
     @ParameterizedTest
@@ -54,7 +62,7 @@ class FanOutNotificationHandlerTest {
         when(recipients.findGridUsers(grid, null, 501)).thenReturn(ids);
         when(save.savePage(any(), anyString(), anyList(), anyString(), anyString(), any()))
                 .thenReturn(List.of()); // 재처리로 모두 중복 저장 제외된 경우
-        var message = weather("2026-09-12T22:00:00Z");
+        var message = weather();
         var result = handler.handle(message);
         verify(recipients, times(1)).findGridUsers(grid, null, 501);
         verify(save).savePage(any(), anyString(), eq(ids.subList(0, Math.min(count, 500))),
@@ -65,7 +73,8 @@ class FanOutNotificationHandlerTest {
             assertThat(result.continuation().deduplicationKey()).isEqualTo(message.deduplicationKey());
             var next = (WeatherNotificationCreateEvent) result.continuation().payload();
             assertThat(next.afterReceiverId()).isEqualTo(ids.get(499));
-            assertThat(next.firstRainAt()).isEqualTo(OffsetDateTime.parse("2026-09-12T22:00:00Z"));
+            assertThat(next.title()).isEqualTo("내일 날씨 예보입니다. | 서울시 은평구 진관동");
+            assertThat(next.content()).isEqualTo("최고 27도, 최저 14도 | 14시부터 비 예정");
             assertThat(result.continuationKey()).isEqualTo(grid.toString());
         } else {
             assertThat(result.continuation()).isNull();
@@ -93,9 +102,9 @@ class FanOutNotificationHandlerTest {
 
     @Test
     void invalidPayloadAndWrongBusinessKeyNeverAccessDatabase() {
-        var valid = weather("2026-09-12T22:00:00Z");
+        var valid = weather();
         var wrongKey = new NotificationCreateMessage<>(valid.eventId(), 2, valid.type(), valid.occurredAt(),
-                "WEATHER_RAIN:2026-09-12", valid.payload());
+                "WEATHER_FORECAST:invalid", valid.payload());
         assertThatThrownBy(() -> handler.handle(wrongKey)).isInstanceOfSatisfying(NotificationException.class,
                 e -> assertThat(e.getErrorCode()).isEqualTo(ErrorCode.INVALID_INPUT_VALUE));
         var invalid = new NotificationCreateMessage<JsonNode>(valid.eventId(), 2, valid.type(), valid.occurredAt(),
